# Cloud_Janitor

./: .dockerignore  .env  .env.example  .gitignore  Dockerfile  README.md  cj  delete.py  main.py  pyproject.toml  tc  tinit.sh
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md  plan.md
.github/workflows/: issue-tracking.yml
ansible/: setup-logging.yml
ansible/playbooks/: setup-cluster.yml  setup-target.yml
ansible/roles/app/tasks/: main.yml
ansible/roles/app/templates/:  janitor-rbac.yaml  janitor-config.yaml  janitor-cronjob.yaml  janitor-secret.yaml
ansible/roles/database/tasks/: main.yml
ansible/roles/grafana/defaults/: main.yml
ansible/roles/grafana/files/: loki-dashboard.json
ansible/roles/grafana/tasks/: main.yml
ansible/roles/logging/manifests/: loki-configmap.yaml  loki-deployment.yaml  loki-service.yaml  promtail-configmap.yaml  promtail-daemonset.yaml  promtail-rbac.yaml
ansible/roles/logging/tasks/: main.yml  setup-logging.yml
ansible/roles/monitoring/: values.yml
pod_py/: 1_cpu_heavy.py  1_memory_bus.py  1_nginx_connect_net.py  1_shiny_tree_cpu.py  1_use_memory.py  2_WorkLifeBalance_cpu.py  2_nginx_connect_net.py  3_scarecrow.py  3_snowing_cpu.py  3_zombi.py  all-in-one.yaml
py_Logic/: config.py  database.py  janitor_logic.py  metrics.py  sql.txt
target-cluster/: README.md  docker-compose.yml  prometheus.yml  promtail-config.yaml  setup-connection-to-cj.sh  setup.sh  teardown.sh
terraform/: database.tf  grafana.tf  helm.tf  main.tf  outputs.tf  variables.tf  zombies.tf
(+3 files in other folders)
