[project]
name = "cloud-janitor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ansible==13.3.0",
    "ansible-core==2.20.2",
    "cffi==2.0.0",
    "cryptography==46.0.4",
    "jinja2==3.1.6",
    "kubernetes>=35.0.0",
    "markupsafe==3.0.3",
    "packaging==26.0",
    "pycparser==3.0",
    "pyyaml==6.0.3",
    "resolvelib==1.2.1",
]
